Make more use of Java NIO